<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_orange"
    android:orientation="vertical"
    tools:context="com.zufaralam02.myapplication.Profile.Fragment.Activity.DetailProfil">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/back_navigation" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/iapps__vertical_margin"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:src="@drawable/ic_profile" />

                        <TextView
                            style="@style/textSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:text="@string/profil_photo_change"
                            android:textColor="@color/background" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#dedede" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_med"
                            android:orientation="vertical">

                            <TextView

                                style="@style/textSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name" />

                            <TextView
                                android:id="@+id/tvNameProf"
                                style="@style/textSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/profil_name" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvChangename"
                            style="@style/textSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:gravity="end"
                            android:text="@string/profil_name_change"
                            android:textColor="@color/background" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#dedede" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_med"
                            android:orientation="vertical">

                            <TextView

                                style="@style/textSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email" />

                            <TextView
                                android:id="@+id/tvEmailProf"
                                style="@style/textSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/profil_email" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvChangeEmail"
                            style="@style/textSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:gravity="end"
                            android:text="@string/profil_name_change"
                            android:textColor="@color/background" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#dedede" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_med"
                            android:orientation="vertical">

                            <TextView

                                style="@style/textSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/phone_number" />

                            <TextView
                                android:id="@+id/tvPhoneProf"
                                style="@style/textSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/profil_phone_number" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvChangePhone"
                            style="@style/textSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:gravity="end"
                            android:text="@string/profil_name_change"
                            android:textColor="@color/background" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#dedede" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_med"
                            android:orientation="vertical">

                            <TextView

                                style="@style/textSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pass" />

                            <TextView

                                style="@style/textSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="*********" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvChangePass"
                            style="@style/textSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:gravity="end"
                            android:text="@string/profil_name_change"
                            android:textColor="@color/background" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
