<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.zufaralam02.myapplication.Notification.Activity.DetailNotif">

    <include layout="@layout/back_navigation" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/iapps__vertical_margin"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_med"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:id="@+id/llhomep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dark_background"

                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_med"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvNameDetail"
                            style="@style/textMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lv_name_1"
                            android:textColor="@color/White" />

                        <TextView
                            style="@style/textMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textColor="@color/White" />

                        <TextView
                            android:id="@+id/tvDateDetail"
                            style="@style/textMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lv_date_1"
                            android:textColor="@color/White" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnAddStudent"
                        style="@style/textMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/rectangle_white_button"
                        android:padding="@dimen/margin_med"
                        android:text="Add Student"
                        android:textColor="@color/background" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_med"
                app:cardCornerRadius="5dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvDetailHome"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </android.support.v7.widget.CardView>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
